--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -1,67 +1,97 @@
-.menu{
-	@include media-breakpoint-up(lg) {
-
+.menu {
+	line-height: calc(19 / 16);
+	@include media-breakpoint-up(xl) {
+		font-size: rem(14);
 		display: flex;
 		text-align: center;
-		@include roww(20px);
+		// @include roww(24px);
 		flex-wrap: wrap;
+		justify-content: center;
+	}
+	@include media-breakpoint-up(xxl) {
+		font-size: rem(16);
 	}
 
 	list-style: none;
 	position: relative;
 	margin-bottom: 0;
 	max-width: 100%;
-	li{
-		
+	li {
 		// margin-left: 0;
 		// margin-right: 0;
 		padding: 0;
 	}
-	a{
+	a {
 		display: block;
-		padding: rem(20) calc(var(--bs-gutter-x) / 2);
+		padding: rem(17) calc(var(--bs-gutter-x) / 2);
+		&:not(:hover) {
+			color: $black;
+		}
+	}
+}
+.menu-mobile__inner {
+	.toggle-menu-mobile {
+		@include media-breakpoint-up(lg) {
+			margin-left: -20% !important;
+		}
+	}
+	@include media-breakpoint-up(xl) {
+		nav {
+			margin: 0 calc(-1 * var(--bs-gutter-x) / 2);
+		}
 	}
 }
 
-
-
 .toggle-menu-mobile {
-	--h: #{em(2)};
+	--h: #{rem(2)};
 	--color: #{$primary};
-	--position: calc(var(--h) * 2);
+	--position: calc(var(--h) * 3);
+	display: block;
+	height: calc(var(--h) * 12);
+	position: relative;
+	font-size: rem(24);
+	width: 1em;
+	@include media-breakpoint-up(lg) {
+		--h: #{rem(3)};
+		height: calc(var(--h) * 10.67);
+		font-size: rem(32);
+	}
+	&::before {
+		content: "";
+		position: absolute;
+		width: 150%;
+		height: 150%;
+		left: -25%;
+		top: -25%;
+	}
 	&.on span {
 		--color: transparent;
 	}
 
-	&.on  { 
-		--position: 0; 
+	&.on {
+		--position: 0;
 		--rotate: 45deg;
 	}
-	display: block;
-	height: calc(var(--h)* 12);
-	position: relative; 
-	font-size: 32px;
-	width: 1em;
 	cursor: pointer;
 	span:after,
 	span:before {
 		content: "";
 		position: absolute;
 		left: 0;
-	} 
+	}
 	span {
 		@include a-cent(y);
 		display: block;
 	}
 
-	span:before { 
+	span:before {
 		top: var(--position);
-		transform: rotate3d(0,0,1, var(--rotate, 0));
+		transform: rotate3d(0, 0, 1, var(--rotate, 0));
 	}
 
 	span:after {
 		bottom: var(--position);
-		transform: rotate3d(0,0,1, calc(-1 * var(--rotate,0)));
+		transform: rotate3d(0, 0, 1, calc(-1 * var(--rotate, 0)));
 	}
 	span,
 	span:after,
@@ -71,14 +101,11 @@
 		height: var(--h);
 		background-color: var(--color);
 		transition: all 0.3s;
-		backface-visibility: hidden; 
+		backface-visibility: hidden;
 		transform-origin: 50% 50%;
-	} 
+	}
 }
-@include media-breakpoint-down(lg) {
-
-	
-
+@include media-breakpoint-down(xl) {
 	.menu-mobile {
 		position: fixed !important;
 		z-index: 999;
@@ -90,28 +117,27 @@
 		// left: 0;
 		right: 0;
 		background-color: $body-bg;
-		&:not(.active){
-			transform: translate3d(120%, 0,0);
+		&:not(.active) {
+			transform: translate3d(120%, 0, 0);
 			--opacity: 0;
-			.toggle-menu-mobile{
+			.toggle-menu-mobile {
 				opacity: 0;
 			}
 		}
-		@include mt(.6s);
+		@include mt(0.6s);
 		will-change: transform;
 
-		
-		.toggle-menu-mobile { 
+		.toggle-menu-mobile {
 			margin-left: -15%;
-			position: absolute; 
+			position: absolute;
 			left: 0;
 			right: auto;
-			color: #FFF;
-			top: 10px;
-			z-index: 9999; 
+			color: $black;
+			top: rem(16);
+			z-index: 9999;
 			span:after,
 			span:before {
-				--color: #ffffff;
+				--color: #{$black};
 			}
 		}
 		&__inner {
@@ -123,14 +149,19 @@
 			// @include mt(.3s);
 			// transition-delay: .4s;
 			// opacity: var(--opacity);
+			.toggle-menu-mobile {
+				&::before {
+					background-color: $success;
+					border-radius: 4px;
+				}
+			}
 		}
 
-		&.active { 
+		&.active {
 			.toggle-menu-mobile {
 				opacity: 1;
 			}
 		}
-
 
 		ul {
 			position: relative;
@@ -139,14 +170,13 @@
 		li {
 			display: block;
 			margin: 0;
-			border-top: 1px solid rgba(255, 255, 255, .13);
+			border-top: 1px solid rgba(255, 255, 255, 0.13);
 
 			a {
 				// font-size: 16px;
 
 				padding: 10px;
 				display: block;
-
 			}
 		}
 	}
