--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -15,7 +15,7 @@ include ../blocks/footer/_footer.pug
 
 block variables
 	- let  mainPage= 'main-page' 
-	- let  bg= null
+	- let  bg= 'main.jpg'
 
 block title
 	- let  title= index.head.title
@@ -26,7 +26,7 @@ block pagecontent
 	
 	+header()
 		+top-nav()
-		+topLine
+		//- +topLine
 	main
 		+headerBlock 
 		//- +sCatalog
