--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -15,6 +15,7 @@
 body,
 html {
 	font-size: var(--bs-body-font-size);
+	font-variation-settings: 'wdth' 134, 'GRAD' 0, 'slnt' 0, 'XTRA' 497, 'XOPQ' 96, 'YOPQ' 91, 'YTLC' 433, 'YTUC' 649, 'YTAS' 750, 'YTDE' -177, 'YTFI' 738, 'opsz' 8;
 }
 html{
 	-webkit-text-size-adjust: 100%;
@@ -60,8 +61,8 @@ body {
 		height: 100%;
 		@include mt;
 		// background-color: $body-color;
-		background-color: rgba($body-color, 0.8); 
-    backdrop-filter: blur(5px);
+		background-color: rgba($primary, 0.8); 
+    // backdrop-filter: blur(5px);
 		opacity: 0;
 		z-index: -1;
 		// left: 200px;
