--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -1,7 +1,7 @@
 .menu {
 	line-height: calc(19 / 16);
 	@include media-breakpoint-up(xl) {
-		font-size: rem(14);
+		font-size: rem(14.5);
 		display: flex;
 		text-align: center;
 		// @include roww(24px);
@@ -32,7 +32,7 @@
 .menu-mobile__inner {
 	.toggle-menu-mobile {
 		@include media-breakpoint-up(lg) {
-			margin-left: -20% !important;
+			margin-left: -18% !important;
 		}
 	}
 	@include media-breakpoint-up(xl) {
@@ -53,8 +53,8 @@
 	width: 1em;
 	@include media-breakpoint-up(lg) {
 		--h: #{rem(3)};
-		height: calc(var(--h) * 10.67);
-		font-size: rem(32);
+		height: calc(var(--h) * 9.34);
+		font-size: rem(28);
 	}
 	&::before {
 		content: "";
@@ -149,6 +149,10 @@
 			// @include mt(.3s);
 			// transition-delay: .4s;
 			// opacity: var(--opacity);
+			.top-nav__btn {
+				display: block;
+				margin: rem(16);
+			}
 			.toggle-menu-mobile {
 				&::before {
 					background-color: $success;
@@ -175,7 +179,7 @@
 			a {
 				// font-size: 16px;
 
-				padding: 10px;
+				padding: rem(12) rem(16);
 				display: block;
 			}
 		}
