--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -1,5 +1,6 @@
 .menu {
 	line-height: calc(19 / 16);
+	font-weight: 471;
 	@include media-breakpoint-up(xl) {
 		font-size: rem(14.5);
 		display: flex;
