--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -2,8 +2,23 @@ mixin sContact()
 	// start sContact
 	+b.SECTION.sContact.section#sContact&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 sContact
-				
-			+e.row.row
+			+e.wrapper
+				+e.row.row
+					.col-sm-auto
+						h2 Контакты
+					.col-12.order-md-last
+						h4 Для участников
+						+e.row-sm.row
+							.col-sm-auto
+								+e.item
+									small Адрес электронной почты
+									a(href="email:example@mail.com") example@mail.com
+							.col-sm-auto
+								+e.item
+									small Телефон горячей линии
+									a(href="tel:05555555555") 0 555 555 55 55
+							.col-md
+								+soc()
+					.col-sm-auto.order-sm-2
+						+icon('sContact-logo')
 	// end sContact
