--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -1,48 +1,145 @@
-
-	// start .sContact
-	.sContact {
+// start .sContact
+.sContact {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	&__row{
+	.soc {
+		margin-top: rem(26);
+		margin-bottom: rem(18);
+		@include media-breakpoint-up(md) {
+			margin-top: 0;;
+			margin-bottom: 0;
+			justify-content: flex-end;
+		}
+		&__item {
+			@include media-breakpoint-down(sm) {
+				width: rem(25);
+				height: rem(25);
+			}
+		}
+		.icon {
+			@include media-breakpoint-down(sm) {
+				font-size: rem(13);
+			}
+			&-telegram {
+				@include media-breakpoint-down(sm) {
+					margin-right: 1.5px;
+				}
+			}
+		}
+	}
+	&__row {
 		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: var(--bs-gutter-x);
+		--bs-gutter-y: #{rem(24)};
+		align-items: center;
+		justify-content: space-between;
+		@include media-breakpoint-up(xl) {
 
+		}
 	}
-	.section-title{
-		
+	&__row-sm {
+		--bs-gutter-y: #{rem(16)};
+		// align-items: center;
+		@include media-breakpoint-up(lg) {
+			--bs-gutter-x: #{rem(60)};
+		}
+		@include media-breakpoint-up(xl) {
+			--bs-gutter-x: #{rem(86)};
+		}
 	}
-	&__col{
+	h2 {
+		margin-bottom: 0;
+		color: $primary;
+		font-size: rem(42);
+		line-height: calc(59 / 50);
+		@media (min-width: 375px) {
+			font-size: rem(50);
+		}
+	}
+	h4 {
+		font-size: rem(24);
+		margin-bottom: rem(16);
+	}
+	&__wrapper {
+		background-color: $light;
+		border-radius: $border-radius-lg;
+		padding: rem(32) rem(32) rem(35);
+		.icon-sContact-logo {
+			font-size: rem(22);
+			color: $primary;
+		}
+	}
+	&__item {
+		display: flex;
+		flex-direction: column;
+		small {
+			display: block;
+			font-weight: 200;
+			margin-bottom: 4px;
+			font-size: rem(13);
+			font-variation-settings: 'wdth' 100, 'opsz' 8, 'GRAD' 0, 'slnt' 0, 'XTRA' 497, 'XOPQ' 96, 'YOPQ' 91, 'YTLC' 433, 'YTUC' 649, 'YTAS' 750, 'YTDE' -177, 'YTFI' 738;
+			@include media-breakpoint-up(sm) {
+				font-size: rem(15);
+			}
+		}
+		a {
+			display: inline-block;
+			font-size: rem(20);
+			line-height: calc(23 / 20);
+			@include media-breakpoint-up(sm) {
+				font-size: rem(23);
+				line-height: calc(27 / 23);
+			}
+		}
+	}
+	// .section-title{
 
-	}
-	&__item{
+	// }
+	// &__col{
 
+	// }
+	// &__item{
+
+	// }
+	// &__slide{
+	// 	height: auto;
+	// }
+	@include media-breakpoint-up(xl) {
 	}
-	&__slide{
-		height: auto;
+	@include media-breakpoint-up(lg) {
 	}
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-up(xs) {}
-	
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-up(xs) {
+	}
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
-	//
-	@include media-breakpoint-only(xs) {}
-	@include media-breakpoint-only(sm) {}
-	@include media-breakpoint-only(md) {}
-	@include media-breakpoint-only(lg) {}
-	@include media-breakpoint-only(xl) {}
-	
-	//
-	@include media-breakpoint-down(xl) {}
-	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
+	@include media-breakpoint-between(md, xl) {
+	}
 
+	//
+	@include media-breakpoint-only(xs) {
+	}
+	@include media-breakpoint-only(sm) {
+	}
+	@include media-breakpoint-only(md) {
+	}
+	@include media-breakpoint-only(lg) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+
+	//
+	@include media-breakpoint-down(xl) {
+	}
+	@include media-breakpoint-down(lg) {
+	}
+	@include media-breakpoint-down(md) {
+	}
+	@include media-breakpoint-down(sm) {
+	}
+	@include media-breakpoint-down(xs) {
+	}
 } // end.sContact
