--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -1,5 +1,6 @@
 .pixel-perfect {
 	top: 0;
+	// top: -5415px;
 	display: block;
 	@include a-cent(x);
 	pointer-events: none;
@@ -7,6 +8,7 @@
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	// height: 7483px;
 	background-position: center 0;
 	opacity: 0;
 	// opacity: 0.7;
