--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,9 +23,13 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-sContact-logo {
+	font-size:math.div(22,10)*1rem;
+	width: math.div(147,22)*1em;
+}
 .icon-telegram {
-	font-size:math.div(16,10)*1rem;
-	width: math.div(16,16)*1em;
+	font-size:math.div(20,10)*1rem;
+	width: math.div(23,20)*1em;
 }
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
