--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -18,9 +18,9 @@
 		&:hover{
 		 	// box-shadow: 0 0 33px 0px rgba(255, 83, 0, 0.16);
 			// opacity: .6 ;
-			color: $primary;
-			background-color: $white;
-			border-color: $primary;
+			// color: $primary;
+			background-color: $link-hover-color;
+			border-color: $link-hover-color;
 		}
 		
 	}
