--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -466,7 +466,7 @@ $emphasis-color:            $black !default;
 $link-color:                              $primary !default;
 $link-decoration:                         none;
 $link-shade-percentage:                   20% !default;
-$link-hover-color:                        $primary;
+$link-hover-color:                        $success;
 // $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
 $link-hover-decoration:                   null !default;
 
