--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -1,9 +1,10 @@
 mixin footer()
 	+b.FOOTER.footer.section
 		.container
-			.row
-				.col
-					
-				.col Footer
-				.col
-				.col-auto
+			+e.row.row
+				.col-md-auto
+					a(href="#") Политика конфиденциальности
+				.col-md-auto
+					a(href="#") Положение о&nbsp;Конкурсе
+				.col-md-auto
+					a(href="#") FAQ
