--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,62 +1,95 @@
 .footer {
-		
 	margin-top: auto;
-// --sPT: #{rem()};
-	// --sPB: #{rem()};
+	--sPT: 0;
+	--sPB: #{rem(18)};
 	// --sTPB: #{rem()};
-	&__row{
-		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: var(--bs-gutter-x);
-
+	@include media-breakpoint-up(md) {
+		--sPT: 0;
+		--sPB: #{rem(150)};
 	}
-	.section-title{
-		
+	@include media-breakpoint-up(xxl) {
+		--sPT: 0;
+		--sPB: #{rem(300)};
 	}
-	&__col{
-
+	&__row {
+		--bs-gutter-y: calc(var(--bs-gutter-x) / 2);
+		@include media-breakpoint-up(xl) {
+			--bs-gutter-y: 0;
+			--bs-gutter-x: #{rem(60)};
+		}
 	}
-	&__item{
-
+	a {
+		display: inline-block;
+		font-weight: 200;
+		font-size: rem(15);
+		font-variation-settings: "wdth" 100, "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433,
+			"YTUC" 649, "YTAS" 750, "YTDE" -177, "YTFI" 738;
+		color: $black;
+		&:hover {
+			color: $primary;
+		}
 	}
-	&__slide{
-		height: auto;
+	// .section-title{
+
+	// }
+	// &__col{
+
+	// }
+	// &__item{
+
+	// }
+	// &__slide{
+	// 	height: auto;
+	// }
+	//
+	@include media-breakpoint-up(xl) {
 	}
-// 
-@include media-breakpoint-up(xl) {}
 
-@include media-breakpoint-up(lg) {}
+	@include media-breakpoint-up(lg) {
+	}
 
-@include media-breakpoint-up(md) {}
+	@include media-breakpoint-up(md) {
+	}
 
-@include media-breakpoint-up(sm) {}
+	@include media-breakpoint-up(sm) {
+	}
 
-@include media-breakpoint-up(xs) {}
+	@include media-breakpoint-up(xs) {
+	}
 
+	//
+	@include media-breakpoint-between(md, xl) {
+	}
 
-// 
-@include media-breakpoint-between(md, xl) {}
+	//
+	@include media-breakpoint-only(xs) {
+	}
 
+	@include media-breakpoint-only(sm) {
+	}
 
-// 
-@include media-breakpoint-only(xs) {}
+	@include media-breakpoint-only(md) {
+	}
 
-@include media-breakpoint-only(sm) {}
+	@include media-breakpoint-only(lg) {
+	}
 
-@include media-breakpoint-only(md) {}
+	@include media-breakpoint-only(xl) {
+	}
 
-@include media-breakpoint-only(lg) {}
+	//
+	@include media-breakpoint-down(xl) {
+	}
 
-@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-down(lg) {
+	}
 
+	@include media-breakpoint-down(md) {
+	}
 
-// 
-@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-down(sm) {
+	}
 
-@include media-breakpoint-down(lg) {}
-
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
-
-@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-down(xs) {
+	}
 }
