--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -25,8 +25,9 @@
 	a {
 		display: block;
 		padding: rem(17) calc(var(--bs-gutter-x) / 2);
-		&:not(:hover) {
-			color: $black;
+		color: $black;
+		&:hover {
+			color: $primary;
 		}
 	}
 }
