--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -4,13 +4,13 @@ include ../blocks/header/_header.pug
 include ../blocks/topLine/_topLine.pug
 include ../blocks/top-nav/_top-nav.pug 
 include ../blocks/headerBlock/_headerBlock.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sContent/_sContent.pug
+//- include ../blocks/sForm/_sForm.pug
+//- include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sCatalog/_sCatalog.pug
+//- include ../blocks/sForm/_sForm.pug
+include ../blocks/sPrize/_sPrize.pug
+//- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
 
 block variables
@@ -30,7 +30,8 @@ block pagecontent
 	main
 		+headerBlock 
 		//- +sCatalog
-		+sForm()
+		//- +sForm()
+		+sPrize()
 		+sContact()
 		
 	+footer()
