--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -27,6 +27,18 @@
 	font-size:math.div(22,10)*1rem;
 	width: math.div(147,22)*1em;
 }
+.icon-star-first {
+	font-size:math.div(84,10)*1rem;
+	width: math.div(85,84)*1em;
+}
+.icon-star-second {
+	font-size:math.div(58,10)*1rem;
+	width: math.div(58,58)*1em;
+}
+.icon-star-third {
+	font-size:math.div(37,10)*1rem;
+	width: math.div(37,37)*1em;
+}
 .icon-telegram {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(23,20)*1em;
