--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -91,6 +91,7 @@
 			display: inline-block;
 			font-size: rem(20);
 			line-height: calc(23 / 20);
+			font-weight: 471;
 			@include media-breakpoint-up(sm) {
 				font-size: rem(23);
 				line-height: calc(27 / 23);
