--- a/sourse/pug/blocks/sPrize/_sPrize.scss
+++ b/sourse/pug/blocks/sPrize/_sPrize.scss
@@ -5,8 +5,11 @@
 	// --sTPB: #{rem()};
 	&__row {
 		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
+		--bs-gutter-y: #{rem(8)};
 		align-items: flex-end;
+		@include media-breakpoint-up(md) {
+			--bs-gutter-y: #{rem(16)};
+		}
 	}
 	.section-title {
 	}
@@ -14,43 +17,118 @@
 
 	// }
 	&__item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	&__amount {
+		display: flex;
+		flex-direction: column;
+		b {
+			font-weight: 471;
+			@include rfs(80px, font-size);
+			// font-size: rem(100);
+			line-height: calc(117 / 100);
+			@include media-breakpoint-up(xl) {
+				font-size: rem(100);
+			}
+		}
+	}
+	&__sum {
+		font-weight: 471;
+		font-size: rem(24);
+		line-height: calc(28 / 24);
+		color: $primary;
+		@include media-breakpoint-up(lg) {
+			font-size: rem(32);
+			line-height: calc(38 / 32);
+			margin-bottom: rem(16);
+		}
+		@include media-breakpoint-up(xxl) {
+			margin-bottom: rem(20);
+		}
 	}
 	&__position {
+		@include roww(14px, m);
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 		align-items: center;
 		border: 3px solid $success;
 		border-radius: rem(450);
+		width: 100%;
 		span {
 			display: block;
 			font-weight: 471;
-			font-size: rem(24);
-			line-height: calc(28 / 24);
+			font-size: rem(20);
+			line-height: calc(23 / 20);
+			@include media-breakpoint-up(xl) {
+				font-size: rem(24);
+				line-height: calc(28 / 24);
+			}
 		}
 		.icon {
 			color: $primary;
 			fill: none;
 			stroke: currentColor;
 			stroke-width: 4px;
-		}
-	}
-	&__position--second {
-		border-width: rem(10);
-		.icon {
-			font-size: rem(62);
+			display: none;
+			@include media-breakpoint-up(lg) {
+				display: block;
+			}
 		}
 	}
 	&__position--first {
-		border-width: rem(14);
-		padding: rem(25) rem(41) rem(25) rem(53);
+		border-width: rem(10);
+		padding: rem(10) rem(20);
+		@include media-breakpoint-up(lg) {
+			border-width: rem(12);
+			padding: rem(21) rem(30) rem(21) rem(35);
+		}
+		@include media-breakpoint-up(xl) {
+			border-width: rem(14);
+			padding: rem(25) rem(41) rem(25) rem(53);
+		}
 		.icon {
-			font-size: rem(90);
+			font-size: rem(78);
+			@include media-breakpoint-up(xl) {
+				font-size: rem(90);
+			}
+		}
+	}
+	&__position--second {
+		border-width: rem(4);
+		padding: rem(16) rem(26);
+		@include media-breakpoint-up(lg) {
+			border-width: rem(8);
+			padding: rem(10) rem(18) rem(10) rem(28);
+		}
+		@include media-breakpoint-up(xl) {
+			border-width: rem(10);
+			padding: rem(12) rem(22) rem(12) rem(34);
+		}
+		.icon {
+			font-size: rem(52);
+			@include media-breakpoint-up(xl) {
+				font-size: rem(62);
+			}
 		}
 	}
 	&__position--third {
-		padding: rem(8) rem(13) rem(9) rem(28);
+		border-width: 1px;
+		padding: rem(19) rem(29);
+		@include media-breakpoint-up(lg) {
+			border-width: rem(3);
+			padding: rem(6) rem(10) rem(6) rem(23);
+		}
+		@include media-breakpoint-up(xl) {
+			padding: rem(8) rem(13) rem(9) rem(28);
+		}
 		.icon {
-			font-size: rem(39);
+			font-size: rem(32);
+			@include media-breakpoint-up(xl) {
+				font-size: rem(39);
+			}
 		}
 	}
 
