--- a/sourse/pug/blocks/sPrize/_sPrize.pug
+++ b/sourse/pug/blocks/sPrize/_sPrize.pug
@@ -12,21 +12,21 @@ mixin sPrize(data)
 					+e.item
 						+e.sum.d-none.d-lg-block 100&nbsp;000 руб
 						+e.position--first
-							span 1 место
+							span 1&nbsp;место
 							+icon('star-first')
 							+e.sum.d-lg-none 100&nbsp;000 руб
 				.col-lg-4.order-lg-first
 					+e.item
 						+e.sum.d-none.d-lg-block 85&nbsp;000 руб
 						+e.position--second
-							span 2 место
+							span 2&nbsp;место
 							+icon('star-second')
 							+e.sum.d-lg-none 85&nbsp;000 руб
 				.col-lg-4
 					+e.item
 						+e.sum.d-none.d-lg-block 65&nbsp;000 руб
 						+e.position--third
-							span 3 место
+							span 3&nbsp;место
 							+icon('star-third')
 							+e.sum.d-lg-none 65&nbsp;000 руб
 
