--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -8,6 +8,7 @@ include ../blocks/headerBlock/_headerBlock.pug
 //- include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
+include ../blocks/sProcedure/_sProcedure.pug
 //- include ../blocks/sForm/_sForm.pug
 include ../blocks/sPrize/_sPrize.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
@@ -28,9 +29,8 @@ block pagecontent
 		+top-nav()
 		//- +topLine
 	main
-		+headerBlock 
-		//- +sCatalog
-		//- +sForm()
+		+headerBlock
+		+sProcedure()
 		+sPrize()
 		+sContact()
 		
