--- a/sourse/pug/blocks/sProcedure/_sProcedure.pug
+++ b/sourse/pug/blocks/sProcedure/_sProcedure.pug
@@ -5,19 +5,22 @@ mixin sProcedure(data)
 			+b.section-title
 				h2 Что нужно сделать?
 			+e.row.row
-				.col-lg-3
+				+e.col.col-lg-3
+					+icon('curved-arrow-1')
 					+e.item
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Зарегистрируйся <br> на&nbsp;хакатон
-				.col-lg-3
+				+e.col.col-lg-3
+					+icon('curved-arrow-2')
 					+e.item
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Собери <br> команду
-				.col-lg-3
+				+e.col.col-lg-3
+					+icon('curved-arrow-3')
 					+e.item
 						span 25&nbsp;января&nbsp;&minus; 14&nbsp;февраля
 						b Выбери <br> кейс
-				.col-lg-3
+				+e.col.col-lg-3
 					+e.item
 						span 17&minus;19 февраля
 						b Создай <br> решение
