--- a/sourse/pug/blocks/sProcedure/_sProcedure.scss
+++ b/sourse/pug/blocks/sProcedure/_sProcedure.scss
@@ -3,29 +3,50 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	--sTPB: #{rem(32)};
+	@include media-breakpoint-up(md) {
+		--sTPB: #{rem(60)};
+	}
+	@include media-breakpoint-up(xl) {
+		--sTPB: #{rem(97)};
+	}
 	&__row {
 		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
+		--bs-gutter-y: calc(var(--bs-gutter-x) / 2);
+		@include media-breakpoint-between(lg, xxl) {
+			--bs-gutter-x: #{rem(24)};
+		}
 	}
 	// .section-title{
 
 	// }
-	// &__col{
 
-	// }
 	&__item {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		text-align: center;
-		padding: rem(16);
+		padding: rem(10);
 		height: 100%;
 		border-radius: rem(450);
-		border: 16px solid $success;
-		min-height: rem(150);
+		border: 10px solid $success;
+		margin: 0 rem(12);
+		min-height: rem(90);
+		@include media-breakpoint-up(sm) {
+			min-height: rem(100);
+		}
+		@include media-breakpoint-up(md) {
+			margin: 0 rem(16);
+			min-height: rem(130);
+			padding: rem(16);
+		}
 		@include media-breakpoint-up(lg) {
+			margin: 0;
 			min-height: 160px;
+		}
+		@include media-breakpoint-up(xl) {
+			min-height: 180px;
 		}
 		@include media-breakpoint-up(xxl) {
 			min-height: rem(215);
@@ -37,7 +58,7 @@
 			font-size: rem(15);
 			line-height: calc(18 / 15);
 			@include media-breakpoint-between(sm, lg) {
-				font-size: rem(16);
+				font-size: rem(17.5);
 			}
 			@include media-breakpoint-up(lg) {
 				font-size: rem(14);
@@ -53,7 +74,7 @@
 			font-size: rem(15);
 			line-height: calc(18 / 15);
 			@include media-breakpoint-between(sm, lg) {
-				font-size: rem(20);
+				font-size: rem(22);
 			}
 			@include media-breakpoint-up(xl) {
 				font-size: rem(18);
@@ -70,7 +91,76 @@
 			}
 		}
 	}
+	&__col {
+		position: relative;
+		.icon {
+			position: absolute;
+			font-size: rem(14);
+			fill: $primary;
+			z-index: 2;
+			right: 0;
+			bottom: calc(-1 * var(--bs-gutter-y));
+			transform: rotate(90deg);
+			@include media-breakpoint-up(md) {
+				transform: rotate(90deg) translateY(-50%);
+				font-size: rem(24);
+			}
+			@include media-breakpoint-up(lg) {
+				font-size: rem(28);
+				right: 0;
+				transform: translate3d(50%, 0, 0);
+				bottom: 100%;
+			}
+			@include media-breakpoint-up(xxl) {
+				font-size: rem(31);
+			}
+		}
 
+		&:first-child {
+			.sProcedure__item {
+				border-width: rem(2);
+				@include media-breakpoint-up(md) {
+					border-width: rem(3);
+				}
+			}
+		}
+		&:nth-child(2) {
+			.icon {
+				left: 0;
+				@include media-breakpoint-up(md) {
+					transform: rotate(90deg) translateY(50%);
+				}
+				@include media-breakpoint-up(lg) {
+					transform: translate3d(50%, 0, 0);
+					left: auto;
+					top: 100%;
+					bottom: auto;
+				}
+			}
+			.sProcedure__item {
+				border-width: rem(4);
+				@include media-breakpoint-up(md) {
+					border-width: rem(8);
+				}
+			}
+		}
+		&:nth-child(3) {
+			.sProcedure__item {
+				border-width: rem(8);
+				@include media-breakpoint-up(md) {
+					border-width: rem(14);
+				}
+			}
+		}
+		&:nth-child(4) {
+			.sProcedure__item {
+				border-width: rem(10);
+				@include media-breakpoint-up(md) {
+					border-width: rem(16);
+				}
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
