--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -15,6 +15,18 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-curved-arrow-1 {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(94,32)*1em;
+}
+.icon-curved-arrow-2 {
+	font-size:math.div(33,10)*1rem;
+	width: math.div(95,33)*1em;
+}
+.icon-curved-arrow-3 {
+	font-size:math.div(33,10)*1rem;
+	width: math.div(95,33)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
