--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -29,9 +29,9 @@ mixin top-nav()
 						.menu-mobile__inner
 							+menu-toggle()
 							+mnu()
-							+e.btn.btn.btn-success.d-xl-none(href="#") Регистрация
+							+e.btn.btn.btn-success.d-xl-none(href="#") Регистрация/Войти
 				.col-auto.d-none.d-xl-inline-block
-					+e.btn.btn.btn-success(href="#") Регистрация
+					+e.btn.btn.btn-success(href="#") Регистрация/Войти
 				.col-auto.order-xl-first
 					+e.logo(href="#")
 						+img('img/svg/header-logo.svg')
