--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -1,10 +1,18 @@
 mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock.section#headerBlock&attributes(attributes)
-		.container
-			+b.section-title.text-center
-				h2 Эксперты и Жюри
+		.container 
+			+e.text-wrap.text-wrap
+				+e.head <{ Кодим вместе  17 — 19 февраля! }>
 
-			.row
-						
+				+e.img-wrap
+					+pic("head-img.png")
+				h1 Молодёжный бит
+				p Всероссийский хакатон <br> для талантливых IT-специалистов
+				ul
+					li Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей
+					li Приходи кодить на&nbsp;офлайн-площадку в&nbsp;Москве
+					li Участвуй онлайн из&nbsp;любой точки страны
+					li Регистрируйся до&nbsp;14&nbsp;февраля
+				+e.btn(href="#").btn.btn-success Зарегистрироваться
 	// end headerBlock
