--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -9,7 +9,7 @@ include ../blocks/headerBlock/_headerBlock.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sProcedure/_sProcedure.pug
-//- include ../blocks/sForm/_sForm.pug
+include ../blocks/sCases/_sCases.pug
 include ../blocks/sPrize/_sPrize.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
@@ -31,6 +31,7 @@ block pagecontent
 	main
 		+headerBlock
 		+sProcedure()
+		+sCases()
 		+sPrize()
 		+sContact()
 		
