--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -4,6 +4,20 @@ mixin sCases(data)
 		.container
 			+b.section-title.text-center
 				h2 sCases
-				
-			+e.row.row
+			.tabs
+				.tabs__caption
+					.tabs__btn.active
+						span Дашборд регионов
+					.tabs__btn
+						span Цифровой помощник
+					.tabs__btn
+						span Росмолодёжь-Digital
+					.tabs__btn
+						span Объединяя молодёжь
+				.tabs__content.active
+					
+				.tabs__content
+					
+				.tabs__content
+					
 	// end sCases
