--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -13,6 +13,7 @@ include ../blocks/sCases/_sCases.pug
 include ../blocks/sPrize/_sPrize.pug
 include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sTeam/_sTeam.pug
+include ../blocks/sPersons/_sPersons.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
 
@@ -37,6 +38,8 @@ block pagecontent
 		+sProcedure()
 		+sCases()
 		+sPrize()
+		
+		+sPersons
 		+sContact()
 		
 	+footer()
