--- a/sourse/pug/blocks/sTeam/_sTeam.scss
+++ b/sourse/pug/blocks/sTeam/_sTeam.scss
@@ -6,7 +6,7 @@
 	&__row{
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
-
+		align-items: center;
 	}
 	.section-title{
 		
@@ -17,7 +17,151 @@
 	&__item{
 
 	}
+	h2{
+		margin-bottom: .5em;
+	}
+	&__text-wrap{
+		position: relative;
+		@include media-breakpoint-up(xl) {
 
+			max-width: rem(540);
+			padding-right: rem(50);
+		}
+
+	}
+	h2,
+	.text-wrap{
+	}
+	&__btn{
+		font-size: 15px;
+		@include media-breakpoint-up(sm) {
+			font-size: rem(25);
+		}
+		padding: em(12) em(22);
+	}
+	
+	
+	&__img-wrap{
+		// max-width: rem(440);
+		@include media-breakpoint-up(xl) {
+			
+			position: absolute;
+			top: calc(-1 * var(--sPT));
+			left: 100%;
+			margin-bottom: 0;
+		}
+		@include media-breakpoint-up(md) {
+			width: rem(658);
+		// display: inline-block;
+		}
+		margin-bottom: 2rem;
+		position: relative;
+		z-index: 2;
+		&::before{
+			content: '';
+			left: -10%;
+			width: 120%;
+			height: 110%;
+			background-image: url(../img/@2x/webp/code.webp);
+			position: absolute;
+			top: -5%;
+		}
+		&::after{
+			content: '';
+			height: 100%;
+			background-image: url(../img/svg/figure4.svg);
+			width: 100%;
+			background-size: contain;
+			background-position: center;
+			background-repeat: no-repeat;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+		img{
+			border-radius: 350px;
+		}
+			
+		picture{
+			position: relative;
+			overflow: hidden;
+			&::before,
+			&::after{
+				content: '';
+				width: 75%;
+				padding-bottom: 67%;
+				border-radius: 350px;
+				position: absolute;
+			}
+			&::before{
+				background: linear-gradient(90deg, #897AD6 0%, rgba(137, 122, 214, 0) 50%);
+				left: 0;
+			}
+			&::after{
+				right: 0;
+				background: linear-gradient(90deg, #B3E427 0%, rgba(173, 167, 203, 0) 50%);
+				transform: matrix(-1, 0, 0, 1, 0, 0);
+			}
+		}
+	}
+	&__text{
+		text-align: center;		
+		background: #897AD6;
+		box-shadow: 0px 28px 58px rgba(0, 0, 0, 0.23);
+		border-radius: 100px;
+		font-weight: 471;
+		padding: em(18) em(18);
+		position: absolute;
+		color: #fff;
+		@include media-breakpoint-up(xl) {
+			width: rem(426);
+			font-size: rem(18);
+		}
+		@include media-breakpoint-up(md){
+			width: rem(306);
+			font-size: rem(14);
+			
+			} 
+		width: 160px;
+		font-size: 8px;
+		z-index: 5;
+		&:nth-child(1){
+			@include media-breakpoint-down(md) {
+				width: 120px;
+			}
+			@include media-breakpoint-up(xxl) {
+
+				right: 60%;
+			}
+			@include media-breakpoint-up(xl) {
+				left: auto;
+				right: 80%;
+				top: 5%;
+			}
+			top: 0;
+			left: 0;
+		}
+		&:nth-child(2){
+			@include media-breakpoint-up(xxl) {
+
+				left: 50%;
+			}
+				@include media-breakpoint-up(xl) {
+					right: auto;
+					left: 20%;
+					top: -8%;
+				}
+				top: 0;
+				right: 0;
+		}
+		
+		&:nth-child(3){
+			right: 40%;
+			// top: -8%;
+			bottom: -5%;
+		}
+
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
