--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -35,9 +35,21 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-sCases-project {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-sCases-video {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-sContact-logo {
 	font-size:math.div(22,10)*1rem;
 	width: math.div(147,22)*1em;
+}
+.icon-sContact-win {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
 }
 .icon-star-first {
 	font-size:math.div(84,10)*1rem;
