--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -14,6 +14,7 @@ include ../blocks/sPrize/_sPrize.pug
 include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sTeam/_sTeam.pug
 include ../blocks/sPersons/_sPersons.pug
+include ../blocks/sLogos/_sLogos.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
 
@@ -40,6 +41,7 @@ block pagecontent
 		+sPrize()
 		
 		+sPersons
+		+sLogos
 		+sContact()
 		
 	+footer()
