--- a/sourse/pug/blocks/sPersons/_sPersons.scss
+++ b/sourse/pug/blocks/sPersons/_sPersons.scss
@@ -15,9 +15,107 @@
 
 	}
 	&__item{
+		
+	}
+	&__title{
+		color: #76728A;
+		font-stretch: 134;
+		font-size: rem(32);
+		margin-bottom: 1em;
+	}
+	&__slider{
+		@include media-breakpoint-down(xl) {
+			overflow: visible;
+		}
+		margin-bottom: rem(60);
+		.row{
+			margin-top: rem(40);
+			// align-items: center;
+		}
+	}
+	&__slide{
+		@include media-breakpoint-up(xl) {
 
+			width: 25%;
+		}
+		height: auto;
+		width: 270px;
+			text-align: center;
+			padding-left: 15px;
+			padding-right: 15px;
 	}
 
+	.swiper-pagination{
+		position: relative;
+		text-align: left;
+		margin-top: .5rem;
+	}
+	.arrow-wrap{
+		display: flex;
+		align-items: center;
+	}
+	.swiper-button-hand{
+		position: static;
+		margin-left: rem(30);
+		// display: inline-block !important;
+	}
+	&__name{
+		font-size: rem(20);
+		font-weight: 471;
+		font-stretch: 134;
+		margin-bottom: rem(20);
+		margin-left: auto;
+		margin-right: auto;
+		max-width: rem(280);
+	}
+	&__img-wrap{
+		@include media-breakpoint-up(xl) {
+
+			max-width: rem(238);
+		}
+		max-width: rem(208);
+		// height: rem(238);
+		margin-left: auto;
+		z-index: 2;
+		margin-right: auto;
+		position: relative;
+		margin-bottom: rem(28);
+		@include block;
+		&::after{
+			content: '';
+			width: 100%;
+			height: 100%;
+			top: rem(10);
+			left: rem(10);
+			background-image: url(../img/svg/figure5.svg);
+			background-size: contain;
+			z-index: -1;
+			position: absolute;
+			background-repeat: no-repeat;
+		}
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			mask-image: url(../img/mask.png);
+			mask-size: cover; 
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+	}
+	&__text{
+		font-size: rem(15);
+		margin-left: auto;
+		margin-right: auto;
+		max-width: rem(270);
+			font-weight: 200; 
+		line-height: 150%; 
+		text-align: center; 
+		color: #76728A;
+		font-stretch: 100;
+		font-variation-settings: 'opsz' 8, 'GRAD' 0, 'slnt' 0, 'XTRA' 497, 'XOPQ' 96, 'YOPQ' 91, 'YTLC' 433, 'YTUC' 649, 'YTAS' 750, 'YTDE' -177, 'YTFI' 738;
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
