--- a/sourse/pug/blocks/sLogos/_sLogos.scss
+++ b/sourse/pug/blocks/sLogos/_sLogos.scss
@@ -17,7 +17,65 @@
 	&__item{
 
 	}
+	&__title-sub{
+		@include rfs(32px);
+	}
+	.swiper-wrapper{
+		@include row-sw;
+	}
+	&__slider{
 
+		margin-bottom: rem(120);
+	}
+	&__slide{
+		// @include col-sw;
+		padding-left: 15px;padding-right: 15px;
+		@include media-breakpoint-up(lg) {
+			max-width: 25% !important;
+			width: 25% !important;
+
+		}
+		@include media-breakpoint-up(sm) {
+
+			width: 300px;
+		}
+		flex: 0 0 auto !important;
+		text-align: center;
+		margin-bottom: rem(50);
+
+		font-weight: 471;
+		font-size: 20px;
+		line-height: 23px;
+		text-align: center; 
+		color: #251E45;
+		font-stretch: 134;
+	}
+	&__item{
+		margin-left: auto;
+		margin-right: auto;
+		max-width: rem(280);
+	}
+
+	&__img-wrap{
+		@include block;
+	}
+
+
+
+	.swiper-pagination{
+		position: relative;
+		text-align: left;
+		margin-top: .5rem;
+	}
+	.arrow-wrap{
+		display: flex;
+		align-items: center;
+	}
+	.swiper-button-hand{
+		position: static;
+		margin-left: rem(30);
+		// display: inline-block !important;
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
