--- a/sourse/pug/blocks/sLogos/_sLogos.pug
+++ b/sourse/pug/blocks/sLogos/_sLogos.pug
@@ -7,7 +7,7 @@ mixin sLogos(data)
 				
 			+e.title-sub  Организаторы
 			mixin control()
-				.row
+				.row.d-lg-none
 					.col
 						.swiper-pagination
 					.col-auto
