--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -16,7 +16,25 @@ mixin sCases(data)
 						span Объединяя молодёжь
 				.tabs__wrap
 					.tabs__content
-						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus impedit sint recusandae ad repellat, dolorem odit ipsam ullam ea. Autem odit quidem iste quam assumenda?
+						.tabs__content-wrap
+							h4 Дашборд регионов
+							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+						.tabs__row.row
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-video')
+									span Видеоинтервью
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-project')
+									span Презентация кейса
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sContact-win')
+									span Победители и&nbsp;призеры
+							.col-xl.order-xl-first
+								.tabs__content-btn(href="#") Хочу решить кейс!
 					.tabs__content.active
 						.tabs__content-wrap
 							h4 Цифровой помощник
@@ -39,7 +57,43 @@ mixin sCases(data)
 								.tabs__content-btn(href="#") Хочу решить кейс!
 
 					.tabs__content
-						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus impedit sint recusandae ad repellat?
+						.tabs__content-wrap
+							h4 Росмолодёжь-Digital
+							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+						.tabs__row.row
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-video')
+									span Видеоинтервью
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-project')
+									span Презентация кейса
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sContact-win')
+									span Победители и&nbsp;призеры
+							.col-xl.order-xl-first
+								.tabs__content-btn(href="#") Хочу решить кейс!
 					.tabs__content
-						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus!
+						.tabs__content-wrap
+							h4 Объединяя молодёжь
+							.small Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							p Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.
+						.tabs__row.row
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-video')
+									span Видеоинтервью
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sCases-project')
+									span Презентация кейса
+							.col-auto
+								a(href="#").tabs__content-link
+									+icon('sContact-win')
+									span Победители и&nbsp;призеры
+							.col-xl.order-xl-first
+								.tabs__content-btn(href="#") Хочу решить кейс!
 	// end sCases
