--- a/sourse/pug/blocks/sCases/_sCases.scss
+++ b/sourse/pug/blocks/sCases/_sCases.scss
@@ -17,7 +17,10 @@
 		max-width: rem(1181);
 		&__caption {
 			@include roww(16px, m);
-			display: flex;
+			display: none;
+			@include media-breakpoint-up(lg) {
+				display: flex;
+			}
 		}
 		&__btn {
 			@extend .btn, .btn-outline-primary;
@@ -35,10 +38,21 @@
 			color: $white;
 			background-color: $primary;
 			border-radius: $border-radius-lg;
-			padding: rem(32);
+			padding: rem(16);
+			margin-bottom: rem(16);
+			@include media-breakpoint-up(sm) {
+				padding: rem(32);
+			}
+			@include media-breakpoint-up(lg) {
+				margin-bottom: 0;
+			}
 			h4 {
 				color: $white;
 				margin-bottom: rem(24);
+				@include media-breakpoint-down(sm) {
+					font-size: rem(20);
+					margin-bottom: rem(16);
+				}
 			}
 			.small {
 				display: block;
@@ -47,6 +61,9 @@
 				margin-bottom: rem(24);
 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+				@include media-breakpoint-down(sm) {
+					font-size: rem(13);
+				}
 			}
 			p {
 				font-weight: 200;
@@ -61,16 +78,25 @@
 		}
 		&__row {
 			align-items: center;
-			--bs-gutter-y: var(--bs-gutter-x);
+			--bs-gutter-y: calc(var(--bs-gutter-x) / 2);
+			@include media-breakpoint-up(md) {
+				--bs-gutter-y: var(--bs-gutter-x);
+			}
 			@include media-breakpoint-up(xl) {
 				--bs-gutter-x: #{rem(42)};
 			}
 		}
 		&__content-wrap {
-			margin-bottom: rem(27);
+			margin-bottom: rem(24);
+			@include media-breakpoint-up(md) {
+				margin-bottom: rem(27);
+			}
 		}
 		&__content-btn {
 			@extend .btn, .btn-success;
+			@include media-breakpoint-down(md) {
+				width: 100%;
+			}
 		}
 		&__content-link {
 			@include roww(16px, m);
@@ -82,13 +108,44 @@
 				color: $link-hover-color;
 			}
 			.icon {
-				font-size: rem(24);
+				font-size: rem(16);
+				@include media-breakpoint-up(sm) {
+					font-size: rem(24);
+				}
 			}
 			span {
 				display: block;
 				font-weight: 471;
 				font-size: rem(15);
 				line-height: calc(18 / 15);
+			}
+		}
+		&__btn-accordion {
+			position: relative;
+			--bs-btn-hover-color: #{$white};
+			--bs-btn-active-color: #{$white};
+			--bs-btn-bg: #{$light};
+			padding: rem(16);
+			padding-right: rem(72);
+			margin-bottom: rem(27);
+			margin-bottom: rem(16);
+			text-align: left;
+			&::after {
+				content: '';
+				@include a-cent(y);
+				position: absolute;
+				right: rem(32);
+				width: rem(16);
+				height: rem(10);
+				background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 0.890625L9 8.89063L17 0.890625' stroke='%23897AD6' stroke-width='2'/%3e%3c/svg%3e ");
+				background-repeat: no-repeat;
+				background-size: contain;
+			}
+			@include media-breakpoint-up(lg) {
+				display: none;
+			}
+			&.active {
+				display: none;
 			}
 		}
 	}
