--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-chevron-down {
+	font-size:math.div(11,10)*1rem;
+	width: math.div(18,11)*1em;
+}
 .icon-curved-arrow-1 {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(94,32)*1em;
