--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -1,6 +1,7 @@
 mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock.section#headerBlock&attributes(attributes)
+		+img('img/page-bg-img-1.png')
 		.container 
 			+e.text-wrap.text-wrap
 				+e.head <{ Кодим вместе  17 — 19 февраля! }>
