--- a/sourse/pug/blocks/sLogos/_sLogos.pug
+++ b/sourse/pug/blocks/sLogos/_sLogos.pug
@@ -1,6 +1,7 @@
 mixin sLogos(data)
 	// start sLogos
 	+b.SECTION.sLogos.section#sLogos&attributes(attributes)
+		+img('img/page-bg-img-3.png')
 		.container
 			+b.section-title
 				h2 Организаторы и партнёры
