--- a/sourse/pug/blocks/sPrize/_sPrize.pug
+++ b/sourse/pug/blocks/sPrize/_sPrize.pug
@@ -1,6 +1,7 @@
 mixin sPrize(data)
 	// start sPrize
 	+b.SECTION.sPrize.section#sPrize&attributes(attributes)
+		+img('img/page-bg-img-2.png')
 		.container
 			+b.section-title
 				h2 Призовой фонд
