--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -34,14 +34,13 @@ block pagecontent
 		//- +topLine
 	main
 		+headerBlock
-		+sAbout
-		+sTeam
+		+sAbout()
+		+sTeam()
 		+sProcedure()
 		+sCases()
 		+sPrize()
-		
-		+sPersons
-		+sLogos
+		+sPersons()
+		+sLogos()
 		+sContact()
 		
 	+footer()
