--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,5 +1,17 @@
 // start .headerBlock
 .headerBlock {
+	position: relative;
+	& > img {
+		position: absolute;
+		display: none;
+		max-width: 50%;
+		left: 0;
+		top: 50%;
+		z-index: -1;
+		@include media-breakpoint-up(md) {
+			display: block;
+		}
+	}
 	@include media-breakpoint-up(sm) {
 
 		--sPT: #{rem(100)};
