--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -4,7 +4,7 @@ mixin headerBlock()
 		+img('img/page-bg-img-1.png')
 		.container 
 			+e.text-wrap.text-wrap
-				+e.head <{ Кодим вместе  17 — 19 февраля! }>
+				+e.head &lt;{ Кодим вместе 17&nbsp;&mdash; 19&nbsp;февраля! }&gt;
 
 				+e.img-wrap
 					+pic("head-img.png")
