--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -34,7 +34,7 @@ mixin sCases(data)
 									+icon('sContact-win')
 									span Победители и&nbsp;призеры
 							.col-xl.order-xl-first
-								.tabs__content-btn(href="#") Хочу решить кейс!
+								a(href="#").tabs__content-btn Хочу решить кейс!
 					.tabs__content.active
 						.tabs__content-wrap
 							h4 Цифровой помощник
@@ -54,7 +54,7 @@ mixin sCases(data)
 									+icon('sContact-win')
 									span Победители и&nbsp;призеры
 							.col-xl.order-xl-first
-								.tabs__content-btn(href="#") Хочу решить кейс!
+								a(href="#").tabs__content-btn Хочу решить кейс!
 
 					.tabs__content
 						.tabs__content-wrap
@@ -75,7 +75,7 @@ mixin sCases(data)
 									+icon('sContact-win')
 									span Победители и&nbsp;призеры
 							.col-xl.order-xl-first
-								.tabs__content-btn(href="#") Хочу решить кейс!
+								a(href="#").tabs__content-btn Хочу решить кейс!
 					.tabs__content
 						.tabs__content-wrap
 							h4 Объединяя молодёжь
@@ -95,5 +95,5 @@ mixin sCases(data)
 									+icon('sContact-win')
 									span Победители и&nbsp;призеры
 							.col-xl.order-xl-first
-								.tabs__content-btn(href="#") Хочу решить кейс!
+								a(href="#").tabs__content-btn Хочу решить кейс!
 	// end sCases
